<?xml version="1.0"?>
<package>
  <name>ypspur_ros</name>
  <version>0.0.0</version>
  <description>The ypspur_ros package</description>

  <maintainer email="atsushi.w@openspur.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ypspur_ros</url> -->
  <author email="atsushi.w@openspur.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ypspur</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ypspur</run_depend>

  <export>
  </export>
</package>
