<?xml version="1.0"?>
<package format="2">
  <name>ypspur_ros</name>
  <version>0.3.6</version>
  <description>ROS wrapper for the mobile robot control platform YP-Spur</description>

  <maintainer email="atsushi.w@openspur.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@openspur.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend version_gte="1.21.0">ypspur</depend>
</package>
